@@ -1,5 +1,9 @@
 Changes with Apache 1.3.4
 
+  *) The query switch "httpd -S" didn't exit after showing the
+     vhost settings. That was inconsistent with the other query functions.
+     [Martin Kraemer]
+
   *) Moved the MODULE_MAGIC_COOKIE from before the versions and
      filename to the end of the STANDARD_MODULE_STUFF.  Its
      presence at the beginning prevented reporting of the filename
